--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -673,6 +673,14 @@ search_posts.html
   font-size: 12px;
 }
 
+.search-message {
+  width: 100%;
+  height: 506px;
+  padding: 20px 20px;
+  font-size: 20px;
+  color: #72b2a8;
+}
+
 
 /* admin new post css start */
 
